--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:json",
     "build:lib": "npm run prepack",
     "build:json": "npm run generate && npm run copy",
-    "generate": "ts-node src/generate.ts",
+    "generate": "esno src/generate.ts",
     "copy": "cp -r ./public/. ./dist && cp README.md ./dist/",
     "friends": "friends add",
     "update": "git add -A && git commit -m '👥 update friends' && git push",
@@ -33,17 +33,19 @@
   "homepage": "https://www.yunyoujun.cn/links/",
   "dependencies": {
     "chalk-pipe": "^5.1.1",
-    "commander": "^8.3.0",
-    "inquirer": "^8.2.0",
+    "commander": "^9.2.0",
+    "inquirer": "^8.2.4",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
     "@types/chalk-pipe": "^2.0.0",
-    "@types/inquirer": "^8.1.3",
-    "@types/js-yaml": "^4.0.4",
-    "@types/node": "^16.11.6",
-    "@yunyoujun/logger": "^0.1.4",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.4.4"
+    "@types/inquirer": "^8.2.1",
+    "@types/js-yaml": "^4.0.5",
+    "@types/node": "^17.0.35",
+    "@yunyoujun/logger": "^0.2.3",
+    "esbuild": "^0.14.39",
+    "esbuild-register": "^3.3.2",
+    "esno": "0.14",
+    "typescript": "^4.6.4"
   }
 }
