add Yuexin's Blog

--- a/public/links.yml
+++ b/public/links.yml
@@ -353,3 +353,10 @@
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
   color: "#E9A390"
+- url: https://wyxogo.top/
+  avatar: https://cdn.jsdelivr.net/gh/wyxogo/files@master/avatar.webp
+  name: Yuexin
+  blog: Yuexin's Blog
+  desc: KEEP WALKING
+  email: wyxogo@163.com
+  color: "#2D96BD"
