--- a/public/links.yml
+++ b/public/links.yml
@@ -353,3 +353,10 @@
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
   color: "#E9A390"
+- url: https://blog.nin.red
+  avatar: https://blog.nin.red/img/icon.png
+  name: NoahHrreion
+  blog: NBlog
+  desc: 由一条咸鱼搭建的博客
+  email: nriot233@outlook.com
+  color: "#46c48b"
