Request to add my link.
RSS：https://lxnchan.cn/atom.xml

--- a/public/links.yml
+++ b/public/links.yml
@@ -353,3 +353,11 @@
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
   color: "#E9A390"
+- url: https://lxnchan.cn
+  avatar: https://lxnchan.cn/assets/logo-v2.webp
+  name: 泠泫凝
+  blog: 泠泫凝的异次元空间
+  desc: 记录一些操作的技巧，研究一些有趣的技术
+  email: lxnchan@outlook.com
+  color: "#03A9F4"
+  
