👥 add friend 三咲智子

--- a/public/links.yml
+++ b/public/links.yml
@@ -353,3 +353,9 @@
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
   color: "#E9A390"
+- url: https://blog.sxzz.moe/
+  avatar: https://fastly.jsdelivr.net/gh/sxzz/static@latest/avatar.png
+  name: 三咲智子
+  desc: 三咲智子
+  email: hi@sxzz.moe
+  color: "#0078E7"
