--- a/public/links.yml
+++ b/public/links.yml
@@ -366,3 +366,9 @@
   desc: 三咲智子
   email: hi@sxzz.moe
   color: "#0078E7"
+- url: https://mcenjoy.cn
+  avatar: https://mcenjoy.cn/avatar
+  name: Enjoy的博客
+  desc: 个人博客，记录生活点滴。
+  email: i@mcenjoy.cn
+  color: "#9b51e0"
