--- a/public/links.yml
+++ b/public/links.yml
@@ -366,3 +366,11 @@
   desc: 三咲智子
   email: hi@sxzz.moe
   color: "#0078E7"
+  name: limo
+  blog: limoの小博客
+  desc: 转瞬即逝的相逢与离别，每一个瞬间，我都想要珍惜
+  email: 2328031994@qq.com
+  color: "#E9A390"
+- url: https://limo.tia.ink/
+  avatar: https://q1.qlogo.cn/g?b=qq&nk=2328031994&s=640
+  
