--- a/public/links.yml
+++ b/public/links.yml
@@ -347,12 +347,12 @@
   email: YuZhangWang233@163.com
   color: "#7FC8F8"
 - url: https://www.miaoer.xyz
-  avatar: https://www.miaoer.xyz/weblogo.png
+  avatar: https://www.miaoer.xyz/weblogo.jpg
   name: 喵二
   blog: 喵二の小博客
   desc: 缘，妙不可言
   email: miaoermua@gmail.com
-  color: "#E9A390"
+  color: "#DDDFF4"
 - url: https://blog.nin.red
   avatar: https://blog.nin.red/img/icon.png
   name: NoahHrreion
