--- a/public/links.yml
+++ b/public/links.yml
@@ -366,3 +366,10 @@
   desc: 三咲智子
   email: hi@sxzz.moe
   color: "#0078E7"
+- url: https://huangxin.dev
+  avatar: https://cloudflare.hxis.top/avatar/latest-180.jpg
+  name: 惶心
+  blog: 惶心博客
+  desc: 别说万事转头空 未转头时为梦
+  email: i@focuschen.com
+  color: "#255597"
