--- a/public/links.yml
+++ b/public/links.yml
@@ -46,8 +46,8 @@
   blog: 皮皮凛の小窝
   desc: 永远相信美好的事情即将发生~
   color: hotpink
-- url: https://asuhe.jp/
-  avatar: https://asuhe.jp/wp-content/uploads/2021/01/avatar.webp
+- url: https://kiseki.blog
+  avatar: https://kiseki.blog/wp-content/uploads/2022/11/avatar.jpg
   name: 染川瞳
   blog: 約束の明日へ
   desc: また君を思い出すよ
