Update SKNP's profile.

--- a/public/links.yml
+++ b/public/links.yml
@@ -219,12 +219,12 @@
   desc: (S)He Has Gone
   email: unscientific_kappa@outlook.com
   color: aqua
-- url: https://sknplz.xyz
-  avatar: https://fastly.jsdelivr.net/gh/Sknp1006/cdn@master/img/albums/arknights_Skadi/024.png
+- url: https://sknp.top
+  avatar: https://images.sknp.top/images/2021/05/04/025.jpg
   name: SKNP
   blog: SKNP的小站
-  desc: 为斯卡蒂献上心脏！
-  email: superai.zhe@gmail.com
+  desc: Someday I will be just like you.
+  email: leizhe1006@qq.com
   color: "#FF6A6A"
 - url: https://jokerm.com
   avatar: https://cdn.jokerm.com/?/imgcdn/logo.png
