--- a/public/links.yml
+++ b/public/links.yml
@@ -373,3 +373,11 @@
   desc: 别说万事转头空 未转头时为梦
   email: i@focuschen.com
   color: "#255597"
+- url: https://yuumi.link
+  avatar: https://
+  name: Yuumi
+  blog: Yuumi的烟波之路
+  desc: 続きを鳴らそう——
+  email: yuumi0221@outlook.com
+  color: "#D69B54"
+  
