--- a/public/links.yml
+++ b/public/links.yml
@@ -374,7 +374,7 @@
   email: i@focuschen.com
   color: "#255597"
 - url: https://yuumi.link
-  avatar: https://
+  avatar: https://cdn.yuumi.link/images/settings/favicon.png
   name: Yuumi
   blog: Yuumi的烟波之路
   desc: 続きを鳴らそう——
