--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "name": "friends",
-  "description": "YunYouJun's friends",
   "version": "1.0.0",
+  "packageManager": "pnpm@8.1.0",
+  "description": "YunYouJun's friends",
+  "author": {
+    "name": "YunYouJun",
+    "email": "me@yunyoujun.cn",
+    "url": "https://www.yunyoujun.cn"
+  },
+  "license": "MIT",
+  "homepage": "https://www.yunyoujun.cn/links/",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YunYouJun/friends.git"
+  },
+  "bugs": {
+    "url": "https://github.com/YunYouJun/friends/issues"
+  },
   "bin": "./bin/run",
   "files": [
     "/bin",
@@ -9,28 +24,13 @@
   ],
   "scripts": {
     "build": "npm run build:json",
-    "build:lib": "npm run prepack",
     "build:json": "npm run generate && npm run copy",
-    "generate": "tsx src/generate.ts",
+    "generate": "tsx scripts/generate.ts",
+    "lint": "eslint .",
     "copy": "cp -r ./public/. ./dist && cp README.md ./dist/",
-    "friends": "friends add",
-    "update": "git add -A && git commit -m '👥 update friends' && git push",
-    "prepack": "rm -rf lib && tsc -b"
+    "friends": "tsx scripts/index.ts add",
+    "update": "git add -A && git commit -m '👥 update friends' && git push"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/YunYouJun/friends.git"
-  },
-  "author": {
-    "name": "YunYouJun",
-    "email": "me@yunyoujun.cn",
-    "url": "https://www.yunyoujun.cn"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/YunYouJun/friends/issues"
-  },
-  "homepage": "https://www.yunyoujun.cn/links/",
   "dependencies": {
     "chalk-pipe": "^6.0.0",
     "commander": "^10.0.0",
@@ -38,13 +38,13 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.38.2",
     "@types/chalk-pipe": "^2.0.1",
     "@types/inquirer": "^9.0.3",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
-    "@yunyoujun/logger": "^0.2.3",
-    "esbuild": "^0.17.5",
-    "esbuild-register": "^3.4.2",
+    "consola": "^2.15.3",
+    "eslint": "^8.37.0",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
