--- a/public/links.yml
+++ b/public/links.yml
@@ -380,4 +380,11 @@
   desc: 続きを鳴らそう——
   email: yuumi0221@outlook.com
   color: "#D69B54"
+- url: https://www.stars22.xyz/
+  avatar: https://www.stars22.xyz/image/logo_0.1.png
+  name: Stars
+  blog: 星华彼岸
+  desc: 在点点星光中积累，以致星空璀璨
+  email: 1187598002@qq.com
+  color: "00bfff"
   
