--- a/public/links.yml
+++ b/public/links.yml
@@ -381,3 +381,10 @@
   email: yuumi0221@outlook.com
   color: "#D69B54"
   
+  - url: https://www.liveout.cn/
+  avatar: https://yy.liveout.cn/photo/photo2.jpg
+  name: Echo
+  blog: Echo的小窝
+  desc: 漂泊于互联中的一个小窝
+  email: 3451914595@qq.com
+  color: '87CEFA'
