--- a/public/links.yml
+++ b/public/links.yml
@@ -340,7 +340,7 @@
   email: liangcx126@gmail.com
   color: "#02A289"
 - url: https://www.yuzhang.wang/
-  avatar: https://fastly.jsdelivr.net/gh/YuZhangWang/Creative_pictures01@main/img/20210907012640.png
+  avatar: https://gcore.jsdelivr.net/gh/YuZhangWang/Creative-pictures02@master/img/202210171416164.png
   name: YuZhangWang
   blog: YuZhangWang的领域
   desc: 两岸猿声啼不住 轻舟已过万重山
