--- a/public/links.yml
+++ b/public/links.yml
@@ -339,11 +339,11 @@
   desc: 读万卷书，行万里路
   email: liangcx126@gmail.com
   color: "#02A289"
-- url: https://www.yuzhang.wang/
+- url: https://yuzhang.wang
   avatar: https://gcore.jsdelivr.net/gh/YuZhangWang/Creative-pictures02@master/img/202210171416164.png
   name: YuZhangWang
   blog: YuZhangWang的领域
-  desc: 两岸猿声啼不住 轻舟已过万重山
+  desc: PLUSULTRA!
   email: YuZhangWang233@163.com
   color: "#7FC8F8"
 - url: https://www.miaoer.xyz
