--- a/public/links.yml
+++ b/public/links.yml
@@ -380,4 +380,10 @@
   desc: 続きを鳴らそう——
   email: yuumi0221@outlook.com
   color: "#D69B54"
-  
+  - url: https://rong6.cn
+  avatar: https://cdn.staticaly.com/gh/rong6/Image_hosting_service@main/20230520/new_%E5%A4%B4%E5%83%8F_%E6%94%BE%E5%A4%A7.xek2hbir2s0.jpg
+  name: 荣6呀
+  blog: 荣6的小站
+  desc: 弱小和无知不是生存的障碍，傲慢才是。
+  email: 1604201832@qq.com
+  color: '#f4645c'
