--- a/public/links.yml
+++ b/public/links.yml
@@ -381,9 +381,9 @@
   email: yuumi0221@outlook.com
   color: "#D69B54"
 - url: https://rong6.cn
-  avatar: https://cdn.staticaly.com/gh/rong6/Image_hosting_service@main/20230520/new_%E5%A4%B4%E5%83%8F_%E6%94%BE%E5%A4%A7.xek2hbir2s0.jpg
+  avatar: https://static.codemao.cn/coco/player/unstable/HJU2TH3pn.image/jpeg
   name: 荣6呀
   blog: 荣6的小站
-  desc: 弱小和无知不是生存的障碍，傲慢才是。
+  desc: 永远相信美好的事情即将发生！
   email: 1604201832@qq.com
   color: '#f4645c'
