--- a/public/links.yml
+++ b/public/links.yml
@@ -387,3 +387,11 @@
   desc: 永远相信美好的事情即将发生！
   email: 1604201832@qq.com
   color: '#f4645c'
+- url: https://lihaoyu.cn
+  avatar: https://blog-api.lihaoyu.cn/avatar
+  name: Big_Cake
+  blog: 晓雨杂记
+  desc: 也许我们会分别，但我们将永远不会忘记彼此。
+  email: me@lihaoyu.cn
+  color: '#F2BC57'
+  
