--- a/public/links.yml
+++ b/public/links.yml
@@ -401,3 +401,10 @@
   desc: 也许我们会分别，但我们将永远不会忘记彼此。
   email: me@lihaoyu.cn
   color: '#F2BC57'
+- url: https://kasuie.cc
+  avatar: https://kasuie.cc/avatar.webp
+  name: kasuie
+  blog: KASUIEの次元
+  desc: 喜欢温柔的人
+  email: kasuie@qq.com
+  color: '#18c964'
