--- a/public/links.yml
+++ b/public/links.yml
@@ -408,4 +408,10 @@
   desc: 喜欢温柔的人
   email: kasuie@qq.com
   color: '#18c964'
-  
+- url: https://www.plsshenyun.top
+  avatar: https://www.plsshenyun.top/ico/ico.png
+  name: 望夜菌
+  blog: 望夜菌的小窝
+  desc: change and challenge!
+  email: plsshenyun@outlook.com
+  color: '#ffd6fb'
