--- a/public/links.yml
+++ b/public/links.yml
@@ -298,12 +298,12 @@
   email: zhouningsiyuan@foxmail.com
   color: "#42b8dd"
 - url: https://blog.besscroft.com/
-  avatar: https://blog.besscroft.com/avatar.png
+  avatar: https://blog.besscroft.com/avatar.jpg
   name: Bess Croft
-  blog: 风与牧歌
+  blog: 旅行者的随想
   desc: 书中自有颜如玉
   email: besscroft@foxmail.com
-  color: "#00A9EF"
+  color: "#00D1CE"
 - url: https://ffis.me/
   avatar: https://img.ffis.me/images/2019/12/21/1.6min.png
   name: 饭饭's Blog
