--- a/public/links.yml
+++ b/public/links.yml
@@ -415,3 +415,10 @@
   desc: change and challenge!
   email: plsshenyun@outlook.com
   color: '#ffd6fb'
+- url: https://www.voidmatrix.work
+  avatar: https://www.voidmatrix.work/images/avatar.jpg
+  name: Voidmatrix
+  blog: Voidmatrix's Blog
+  desc: 重剑无锋，大巧不工
+  email: voidmatrix@outlook.com
+  color: '#ee7948'
