☕blog.kfdzcoffee.cn

--- a/public/links.yml
+++ b/public/links.yml
@@ -422,3 +422,10 @@
   desc: 重剑无锋，大巧不工
   email: voidmatrix@outlook.com
   color: '#ee7948'
+- url: https://blog.kfdzcoffee.cn
+  avatar: https://image.kfdzcoffee.cn/i/1/avatar.png
+  name: 咖啡豆子coffee
+  blog: 咖啡豆子coffee的小站
+  desc: 所有奇迹的始发点
+  email: contact@kfdzcoffee.cn
+  color: "#7FC8F8"
