更新小太链接信息

--- a/public/links.yml
+++ b/public/links.yml
@@ -128,13 +128,13 @@
   desc: 寂静中交织着热情
   email: add_sp@outlook.com
   color: "#007bbb"
-- url: https://baka.fun/
-  avatar: https://gravatar.loli.net/avatar/ad5babe8213864d97007267d9e130291?s=320
-  name: 小太
-  blog: 小太の游乐园
-  desc: 一个热爱ACG的技术宅
-  email: im@baka.fun
-  color: "#e74c3c"
+- url: https://souta.cc/
+  avatar: https://weavatar.com/avatar/0188909a64b2b0ca9225afd0b743cb76?s=256
+  name: Souta
+  blog: Souta's Space
+  desc: 可能是一个笨蛋
+  email: im@souta.cc
+  color: "#f7be6b"
 - url: https://haozi.moe/
   avatar: https://haozi.moe/css/images/logo.png
   name: 月月月子喵
