--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "friends",
+  "type": "module",
   "version": "1.0.0",
-  "packageManager": "pnpm@9.13.2",
+  "packageManager": "pnpm@10.6.5",
   "description": "YunYouJun's friends",
   "author": {
     "name": "YunYouJun",
@@ -33,19 +34,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clack/prompts": "^0.8.1",
+    "@clack/prompts": "^0.10.0",
     "chalk-pipe": "^6.2.0",
-    "commander": "^12.1.0",
+    "commander": "^13.1.0",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.9.1",
+    "@antfu/eslint-config": "^4.10.1",
     "@types/chalk-pipe": "^2.0.4",
     "@types/js-yaml": "^4.0.9",
-    "@types/node": "^22.9.0",
-    "consola": "^3.2.3",
-    "eslint": "^9.15.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "@types/node": "^22.13.10",
+    "consola": "^3.4.2",
+    "eslint": "^9.22.0",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.2"
   }
 }
