--- a/src/links.yml
+++ b/src/links.yml
@@ -237,11 +237,11 @@
   desc: 一个OI蒟蒻的小窝
   email: me@azusemisa.top
   color: "#54cedc"
-- url: https://www.kawashiros.club/
-  avatar: https://i.loli.net/2020/08/14/iV2Ex7yQdXfro8U.jpg
-  name: 非科学のカッパ 
-  blog: 冻符「Minus-K」
-  desc: 非科学のカッパ 的博客
+- url: https://bkryofu.xyz
+  avatar: https://bkryofu.xyz/resources/images/avatar.webp
+  name: 河城凌風
+  blog: 无梦梦游记 
+  desc: 绝望之为虚妄 正与希望相同
   email: unscientific_kappa@outlook.com
   color: aqua
 - url: https://sknplz.xyz
