chore: update friend link bkryofy.kyz, close #110

--- a/public/links.yml
+++ b/public/links.yml
@@ -213,10 +213,10 @@
   email: me@azusemisa.top
   color: "#54cedc"
 - url: https://bkryofu.xyz
-  avatar: https://bkryofu.xyz
-  name: 非科学の河童
-  blog: 冻符「Minus-K」
-  desc: (S)He Has Gone
+  avatar: https://bkryofu.xyz/resources/images/avatar.webp
+  name: 河城凌風
+  blog: 无梦梦游记 
+  desc: 绝望之为虚妄 正与希望相同
   email: unscientific_kappa@outlook.com
   color: aqua
 - url: https://sknp.top
