--- a/public/away.yml
+++ b/public/away.yml
@@ -5,3 +5,10 @@
   blog: ゆめ Yume
   desc: 「技美大佬」
   color: deepskyblue
+- url: https://you.ci
+  avatar: https://www.boke.la/zb_users/upload/2020/03/202003301585568411515430.gif
+  name: 有次
+  blog: 有次博客
+  desc: 有次鞭鞘陆续鸣，赭袍当殿万簪缨。
+  email: bukezhi@qq.com
+  color: "#080808"
